tests/NormalTests/paczka1/fuzzy1/82921753.err
Error in line 12: Ar1kgott8z S110 97,8
Error in line 22: Ar1kgott8z S157 5,81
Error in line 5: KVJMP3QJL S157 42,8
Error in line 14: lSQpX8QoD41 S157 79,3
Error in line 23: KVJMP3QJL A678 11,6
Error in line 26: Ar1kgott8z S110 22,2
Error in line 34: ftTz97 A678 53,1
